# frappe-erpnext-docker-starter

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.node  Dockerfile.rq  README.md  bench_setup_scripts.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
bench_apps/: bench_setup_scripts.sh  bootstrap.sh
infra/config/: my.cnf
