[tool.poetry]
name = "frappe-erpnext-docker-starter"
version = "0.1.0"
description = "Frappe docker compose setting for development with containerized dependencies like mariadb and redis."
authors = ["Akul Mathur <akulmat@proton.me>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
frappe-bench = "~5.22.6"
wkhtmltopdf = {version = "~0.2", optional = false}

[tool.poetry.group.dev.dependencies]
honcho = "~1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
